# web-ssh

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fix-docker-deep.sh  fix-docker.sh
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_init.sql  0002_users_disabled.sql
backend/src/: config.rs  error.rs  main.rs  state.rs
backend/src/auth/: extractors.rs  mod.rs
backend/src/captcha/: mod.rs
backend/src/connections/: mod.rs
backend/src/crypto/: mod.rs
backend/src/db/: mod.rs  models.rs
backend/src/files/: mod.rs
backend/src/ssh/: mod.rs
backend/src/terminal/: mod.rs
backend/src/users/: mod.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: context.ts  env.d.ts  main.ts  styles.css
frontend/src/api/: auth.ts  client.ts  connections.ts  files.ts  terminal.ts  users.ts
frontend/src/components/: AppLayout.vue
frontend/src/composables/: useTerminal.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/utils/: hash.ts
frontend/src/views/: ConnectionsView.vue  FilesView.vue  LoginView.vue  PasswordView.vue  SetupView.vue  TerminalView.vue  UsersView.vue
